# SLAM-complex-Mapping-using-Lidar-and-Autonomous-Navigation-A-and-DWB-with-custom-robot-

./: .gitignore  README.md  THEORY.md
alpha_description_new/: package.xml
alpha_description_new/launch/: display.launch.py  robot_description.launch.py
alpha_description_new/meshes/: front_bumper.stl  wheel_left_back_link.stl  wheel_left_front_link.stl  wheel_right_back_link.stl  wheel_right_front_link.stl
alpha_description_new/urdf/: alpha.xacro  lidar.urdf.xacro  screen.urdf.xacro
gazebo_simulations/: setup.cfg  setup.py
gazebo_simulations/launch/: alpha_warehouse.sdf  gazebo.launch.py
navigation/launch/: navigation.launch.py
navigation/launch/include/: bringup.launch.py
navigation/rviz/: navigation.rviz
slam/config/: slam.yaml
slam/launch/: rviz_slam.launch.py
slam/rviz/: slam.rviz
slam/slam/: map_save.py
src/alpha_description_new/: model.config  setup.cfg  setup.py
src/alpha_description_new/launch/: rviz.launch.py
src/alpha_description_new/urdf/: alpha_car.urdf.xacro  depth_camera.urdf.xacro  imu.urdf.xacro  materials.xacro
src/gazebo_simulations/: package.xml
src/navigation/config/: nav2_controller_dwb.yaml  nav2_params.yaml
src/navigation/launch/: navigation.launch.py  rviz_navigation.launch.py
src/navigation/launch/include/: localization.launch.py  navigation_base.launch.py
src/slam/launch/: slam.launch.py
src/slam/launch/include/: robot.launch.py  slam_base.launch.py
src/slam/slam/: map_save.py
