<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gazebo_simulations</name>
  <version>0.0.0</version>
  <description>Gazebo simulation package for Alpha</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>ros_gz_sim</depend>
  <depend>ros_gz_bridge</depend>
  <depend>alpha_description_new</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
